examples/rust/failing/docstrings/Actual.rs
<<<<<<< LEFT
mod tests {}
||||||| BASE
/// comment
fn foo() {}

mod tests {}
=======
/// comment
fn foo() {}
>>>>>>> RIGHT
